--- a/package.json
+++ b/package.json
@@ -14,6 +14,19 @@
   },
   "scripts": {
     "build": "next build",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "yarn jest"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "jest": "^26.6.3"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    }
   }
 }
