--- a/package.json
+++ b/package.json
@@ -15,18 +15,20 @@
   "scripts": {
     "build": "next build",
     "start": "node server.js",
-    "test": "yarn jest"
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
-    "jest": "^26.6.3"
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "react-test-renderer": "^17.0.2"
   },
   "jest": {
     "transform": {
-      "^.+\\.(js|jsx)$": "babel-jest"
+      "^.+\\.(js|jsx)$": ["babel-jest", { "configFile": "./babel.test.config.js" }]
     }
   }
 }
